Reorganisasion du dossier du projet

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <script src="./node_modules/jspdf/dist/jspdf.min.js"></script>
     <script src="./node_modules/html2canvas/dist/html2canvas.min.js"></script>
     <script src="./node_modules/html2pdf.js/dist/html2pdf.js"></script>
-    <script src="index.js" type="module"></script>
-    <link rel="stylesheet" href="index.css">
+    <script src="js/index.js" type="module"></script>
+    <link rel="stylesheet" href="css/index.css">
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js" integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
 </head>
 <body>
@@ -54,7 +54,7 @@
         });
 
         bouton2.addEventListener("click", (e) =>{
-            window.location.href="page2.html"
+            window.location.href="html/page2.html"
         });
         var newCookie = "name=oeschger; SameSite=None; Secure";
         bouton3.addEventListener("click", (ev) =>{
