--- a/html/approbation.html
+++ b/html/approbation.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script type="module" src="appro.js"></script>
+    <script type="module" src="../js/appro.js"></script>
 </head>
 <body>
     <button id="appro">Appro</button>
