ajout button nav + system give cookie note

--- a/html/page2.html
+++ b/html/page2.html
@@ -48,6 +48,8 @@
 
     <button type="button" id="sauvegarderDonneeslocal">Sauvegarder</button>
 </form>
+<button id="approbationpage">Approbation</button>
+
 
 </body>
 </html>
