finalisation page appro

--- a/html/approbation.html
+++ b/html/approbation.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="../node_modules/es6-promise/dist/es6-promise.auto.min.js"></script>
+    <script src="../node_modules/jspdf/dist/jspdf.min.js"></script>
+    <script src="../node_modules/html2canvas/dist/html2canvas.min.js"></script>
+    <script src="../node_modules/html2pdf.js/dist/html2pdf.js"></script>
     <script type="module" src="../js/appro.js"></script>
+    <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
     <button id="appro">Appro</button>
