Trad du front + modif front pour presentation

--- a/html/approbation.html
+++ b/html/approbation.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
-    <button id="appro">Appro</button>
-    <button id="creaCookieQcm">QCM</button>
+    <button id="appro">Want certificate</button>
+    <button id="creaCookieQcm">Give points</button>
 </body>
 </html>
