--- a/html/page2.html
+++ b/html/page2.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <button id="showCookies">Show cookies</button>
+    <button id="showCookies">Show Data</button>
 
 <button id="clearOutputCookies">Clear</button>
 
@@ -16,26 +16,26 @@
     <code id="cookies"></code>
 </div>
 
-    <h2>cookies</h2>
+    <h2>Save data</h2>
 <form id="userForm">
-    <label for="nom">Nom :</label>
+    <label for="nom">Last name :</label>
     <input type="text" id="nom" name="nom" required>
 
-    <label for="prenom">Prénom :</label>
+    <label for="prenom">First name :</label>
     <input type="text" id="prenom" name="prenom" required>
 
-    <label for="dateNaissance">Date de naissance :</label>
+    <label for="dateNaissance">Date of birth :</label>
     <input type="date" id="dateNaissance" name="dateNaissance" required>
-    <label for="pet-select">Choose a pet:</label>
+    <label for="pet-select">Choose a pathway:</label>
 
     <select name="pets" id="pathway-selected">
         <option value="">--Please choose a pathway--</option>
 </select>
 
-    <button type="button" id="sauvegarderDonnees">Sauvegarder</button>
+    <button type="button" id="sauvegarderDonnees">Save</button>
 </form>
 
-<h2>Localstorage</h2>
+<!-- <h2>Localstorage</h2>
 <form id="userForm">
     <label for="nom2">Nom :</label>
     <input type="text" id="nom2" name="nom2" required>
@@ -47,8 +47,8 @@
     <input type="date" id="dateNaissance2" name="dateNaissance2" required>
 
     <button type="button" id="sauvegarderDonneeslocal">Sauvegarder</button>
-</form>
-<button id="approbationpage">Approbation</button>
+</form> -->
+<button id="approbationpage">certificate request page</button>
 
 
 </body>
