Premiere version crypatge decryptage

--- a/html/approbation.html
+++ b/html/approbation.html
@@ -9,6 +9,7 @@
     <script src="../node_modules/html2canvas/dist/html2canvas.min.js"></script>
     <script src="../node_modules/html2pdf.js/dist/html2pdf.js"></script>
     <script type="module" src="../js/appro.js"></script>
+    <script src="../node_modules/crypto-js/crypto-js.js"></script>
     <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
