Ajout d'une partie des cnd

--- a/html/page2.html
+++ b/html/page2.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="module" src="../js/page2.js"></script>
-    <script src="../node_modules/crypto-js/crypto-js.js"></script>
+    <!-- <script src="../node_modules/crypto-js/crypto-js.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"></script>
     <title>Document</title>
 </head>
 <body>
