--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./node_modules/es6-promise/dist/es6-promise.auto.min.js"></script>
+    <!-- <script src="./node_modules/es6-promise/dist/es6-promise.auto.min.js"></script>
     <script src="./node_modules/jspdf/dist/jspdf.min.js"></script>
     <script src="./node_modules/html2canvas/dist/html2canvas.min.js"></script>
-    <script src="./node_modules/html2pdf.js/dist/html2pdf.js"></script>
+    <script src="./node_modules/html2pdf.js/dist/html2pdf.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-promise/4.2.8/es6-promise.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+    <script type="module" src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.8.0/html2pdf.bundle.min.js"></script>
     <script src="js/index.js" type="module"></script>
     <link rel="stylesheet" href="css/index.css">
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js" integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
