--- a/html/approbation.html
+++ b/html/approbation.html
@@ -1,3 +1,14 @@
+<!--
+File: approbation.html
+Contract: EU contract 2022-FR01-KA220-HED-000023509
+Project: FitNESS 2 ERASMUS+
+File Created: Thursday, 11th April 2024
+Authors: Steward OUADI (AgroParisTech),  Olivier VITRAC (INRAE), Lucca COLLAS
+-----
+Last Modified: Wednesday, 22nd May 2024
+Modified By: Lucca COLLAS
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
