--- a/html/approbation.html
+++ b/html/approbation.html
@@ -14,17 +14,13 @@ Modified By: Lucca COLLAS
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- <script src="../node_modules/es6-promise/dist/es6-promise.auto.min.js"></script>
-    <script src="../node_modules/jspdf/dist/jspdf.min.js"></script>
-    <script src="../node_modules/html2canvas/dist/html2canvas.min.js"></script>
-    <script src="../node_modules/html2pdf.js/dist/html2pdf.js"></script> -->
-
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-promise/4.2.8/es6-promise.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.8.0/html2pdf.bundle.min.js"></script> -->
-    
+    <title>Generate certificate</title>
+    <h1>Generate certificate</h1>
+    <h5>Please note that you must complete the registration form beforehand.</h5>
+    <p>By clicking on "Want certificate", a check will be carried out. We will check that all the quizzes have been completed, that each mark is higher than 5/10 and that the overall mark is at
+         least 8/10 for the certificate of completion.For the attendance certificate, a check will be made to ensure that all the courses have been read within the minimum time. If any of the criteria 
+         are not met, an error message will be issued.</p>
+         <p>By clicking on "Give points" will give you all the points you need to generate the certificate.</p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js" integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"></script>
