adding header footer import fonts boostrap

--- a/html/page2.html
+++ b/html/page2.html
@@ -5,7 +5,7 @@ Project: FitNESS 2 ERASMUS+
 File Created: Thursday, 11th April 2024
 Authors: Steward OUADI (AgroParisTech),  Olivier VITRAC (INRAE), Lucca COLLAS
 -----
-Last Modified: Wednesday, 22nd May 2024
+Last Modified: Friday, 24th May 2024
 Modified By: Lucca COLLAS
 -->
 
@@ -18,9 +18,13 @@ Modified By: Lucca COLLAS
     <script type="module" src="../js/page2.js"></script>
     <!-- <script src="../node_modules/crypto-js/crypto-js.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"></script>
+    <link rel="stylesheet" href="../css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../css/fitness.css">
+    <link rel="stylesheet" href="../css/font-awesome-4-7-0.min.css">
     <title>Document</title>
 </head>
 <body>
+    <main-header></main-header>
     <button id="showCookies">Show Data</button>
 
 <button id="clearOutputCookies">Clear</button>
@@ -56,6 +60,10 @@ Modified By: Lucca COLLAS
 
 <button id="approbationpage">certificate request page</button>
 
+<main-footer></main-footer>
+<link rel="stylesheet" href="../css/bootstrap.min.css" />
+<script src="../js/header.js"></script>
+<script src="../js/footer.js"></script>
 
 </body>
 </html>
