--- a/html/approbation.html
+++ b/html/approbation.html
@@ -5,7 +5,7 @@ Project: FitNESS 2 ERASMUS+
 File Created: Thursday, 11th April 2024
 Authors: Steward OUADI (AgroParisTech),  Olivier VITRAC (INRAE), Lucca COLLAS
 -----
-Last Modified: Wednesday, 22nd May 2024
+Last Modified: Friday, 24th May 2024
 Modified By: Lucca COLLAS
 -->
 
@@ -15,21 +15,30 @@ Modified By: Lucca COLLAS
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Generate certificate</title>
-    <h1>Generate certificate</h1>
-    <h5>Please note that you must complete the registration form beforehand.</h5>
-    <p>By clicking on "Want certificate", a check will be carried out. We will check that all the quizzes have been completed, that each mark is higher than 5/10 and that the overall mark is at
-         least 8/10 for the certificate of completion.For the attendance certificate, a check will be made to ensure that all the courses have been read within the minimum time. If any of the criteria 
-         are not met, an error message will be issued.</p>
-         <p>By clicking on "Give points" will give you all the points you need to generate the certificate.</p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js" integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"></script>
     <script type="module" src="../js/appro.js"></script>
     <!-- <script src="../node_modules/crypto-js/crypto-js.js"></script> -->
     <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../css/fitness.css">
+    <link rel="stylesheet" href="../css/font-awesome-4-7-0.min.css">
 </head>
 <body>
+    <main-header></main-header>
+    <h1>Generate certificate</h1>
+    <h5>Please note that you must complete the registration form beforehand.</h5>
+    <p>By clicking on "Want certificate", a check will be carried out. We will check that all the quizzes have been completed, that each mark is higher than 5/10 and that the overall mark is at
+        least 8/10 for the certificate of completion.For the attendance certificate, a check will be made to ensure that all the courses have been read within the minimum time. If any of the criteria 
+        are not met, an error message will be issued.</p>
+    <p>By clicking on "Give points" will give you all the points you need to generate the certificate.</p>
     <button id="appro">Want certificate</button>
     <button id="creaCookieQcm">Give points</button>
+
+    <main-footer></main-footer>
+<link rel="stylesheet" href="../css/bootstrap.min.css" />
+<script src="../js/header.js"></script>
+<script src="../js/footer.js"></script>
 </body>
 </html>
