new function pdf name function

--- a/html/approbation.html
+++ b/html/approbation.html
@@ -9,6 +9,15 @@ Last Modified: Friday, 24th May 2024
 Modified By: Lucca COLLAS
 -->
 
+<!-- Certificate generation:
+
+   1. ***Generation*** of personalised certificate with your data.
+
+   2. ***Preview*** of personalised certificate with your data.
+
+   3. ***Save*** on your device your pdf certificate. -->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
