--- a/html/page2.html
+++ b/html/page2.html
@@ -9,6 +9,23 @@ Last Modified: Friday, 24th May 2024
 Modified By: Lucca COLLAS
 -->
 
+
+<!-- ## Development of the certification scheme
+
+The ultimate aim is to have a practical system for managing your data so that it can be used for certification purposes.
+
+Use of data:
+   1. ***Import data*** is a function that lets you simply manage your data.
+
+   2. ***Export data*** is a function that lets you simply manage your data.
+
+   3. ***Control your data*** is a function that lets you simply switch devices and use your data without a connection.
+
+Safety and security:
+
+   1. ***Data encryption*** to ensure data security and reliability. -->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
