--- a/html/approbation.html
+++ b/html/approbation.html
@@ -5,7 +5,7 @@ Project: FitNESS 2 ERASMUS+
 File Created: Thursday, 11th April 2024
 Authors: Steward OUADI (AgroParisTech),  Olivier VITRAC (INRAE), Lucca COLLAS
 -----
-Last Modified: Friday, 24th May 2024
+Last Modified: Tuesday, 4th June 2024
 Modified By: Lucca COLLAS
 -->
 
@@ -38,7 +38,7 @@ Modified By: Lucca COLLAS
     <main-header></main-header>
     <h1>Generate certificate</h1>
     <h5>Please note that you must complete the registration form beforehand.</h5>
-    <p>By clicking on "Want certificate", a check will be carried out. We will check that all the quizzes have been completed, that each mark is higher than 5/10 and that the overall mark is at
+    <p>By clicking on "Want certificate", a check will be carried out. We will check that all the quizzes have been completed, that the overall mark is at
         least 8/10 for the certificate of completion.For the attendance certificate, a check will be made to ensure that all the courses have been read within the minimum time. If any of the criteria 
         are not met, an error message will be issued.</p>
     <p>By clicking on "Give points" will give you all the points you need to generate the certificate.</p>
