--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ Project: FitNESS 2 ERASMUS+
 File Created: Thursday, 11th April 2024
 Authors: Steward OUADI (AgroParisTech),  Olivier VITRAC (INRAE), Lucca COLLAS
 -----
-Last Modified: Tuesday, 4th June 2024
+Last Modified: Wednesday, 5th June 2024
 Modified By: Lucca COLLAS
 -->
 
@@ -32,7 +32,7 @@ Safety and security:
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="module" src="js/page2.js"></script>
+    <script type="module" src="js/index.js"></script>
     <!-- <script src="../node_modules/crypto-js/crypto-js.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
