--- a/html/dataManagement.html
+++ b/html/dataManagement.html
@@ -5,7 +5,7 @@ Project: FitNESS 2 ERASMUS+
 File Created: Thursday, 11th April 2024
 Authors: Steward OUADI (AgroParisTech),  Olivier VITRAC (INRAE), Lucca COLLAS
 -----
-Last Modified: Tuesday, 4th June 2024
+Last Modified: Wednesday, 5th June 2024
 Modified By: Lucca COLLAS
 -->
 
@@ -27,7 +27,7 @@ Modified By: Lucca COLLAS
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js" integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <script src="../js/index.js" type="module"></script>
+    <script src="../js/dataManagement.js" type="module"></script>
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css" />
     <link rel="stylesheet" href="../css/fitness.css">
