--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Safety and security:
 </head>
 <body>
     <main-header></main-header>
-    <button id="showCookies">Show Data</button>
+    <button id="showCookies">Show Data test</button>
 
 <button id="clearOutputCookies">Clear</button>
 
