--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Safety and security:
 </head>
 <body>
     <main-header></main-header>
-    <button id="showCookies">Show Data test</button>
+    <button id="showCookies">Show Data</button>
 
 <button id="clearOutputCookies">Clear</button>
 
@@ -50,7 +50,7 @@ Safety and security:
     <code id="cookies"></code>
 </div>
 
-    <h2>Save data</h2>
+    <h2>Save data test</h2>
 <form id="userForm">
     <label for="nom">Last name :</label>
     <input type="text" id="nom" name="nom" required>
