--- a/html/approbation.html
+++ b/html/approbation.html
@@ -5,7 +5,7 @@ Project: FitNESS 2 ERASMUS+
 File Created: Thursday, 11th April 2024
 Authors: Steward OUADI (AgroParisTech),  Olivier VITRAC (INRAE), Lucca COLLAS
 -----
-Last Modified: Wednesday, 5th June 2024
+Last Modified: Thursday, 20th June 2024
 Modified By: Lucca COLLAS
 -->
 
@@ -44,6 +44,7 @@ Modified By: Lucca COLLAS
     <p>By clicking on "Give points" will give you all the points you need to generate the certificate.</p>
     <button id="appro">Want certificate</button>
     <button id="creaCookieQcm">Give points</button>
+    <button id="testcertif">test</button>
 
     <main-footer></main-footer>
 <link rel="stylesheet" href="../css/bootstrap.min.css" />
