--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ Project: FitNESS 2 ERASMUS+
 File Created: Thursday, 11th April 2024
 Authors: Steward OUADI (AgroParisTech),  Olivier VITRAC (INRAE), Lucca COLLAS
 -----
-Last Modified: Wednesday, 5th June 2024
+Last Modified: Thursday, 20th June 2024
 Modified By: Lucca COLLAS
 -->
 
@@ -34,7 +34,9 @@ Safety and security:
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="module" src="js/index.js"></script>
     <!-- <script src="../node_modules/crypto-js/crypto-js.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js" integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"></script>
+    <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/fitness.css">
     <link rel="stylesheet" href="css/font-awesome-4-7-0.min.css">
