--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ Project: FitNESS 2 ERASMUS+
 File Created: Thursday, 11th April 2024
 Authors: Steward OUADI (AgroParisTech),  Olivier VITRAC (INRAE), Lucca COLLAS
 -----
-Last Modified: Thursday, 20th June 2024
+Last Modified: Friday, 21st June 2024
 Modified By: Lucca COLLAS
 -->
 
@@ -52,7 +52,7 @@ Safety and security:
     <code id="cookies"></code>
 </div>
 
-    <h2>Save data test33</h2>
+    <h2>Want my certificate</h2>
 <form id="userForm">
     <label for="nom">Last name :</label>
     <input type="text" id="nom" name="nom" required>
